' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml JobOfferService

skinparam classAttributeIconSize 0

package org.springframework.stereotype {
    annotation Service
}

package java.util {
    interface Collection<T>
    interface Map<K,V>
    class UUID

    UUID .left[hidden].> Service
}

package com.acme.jobconnect {
    package entity {
        class JobOffer << entity >>

        JobOffer .up[hidden].> Collection
    }

    package repository {
        class JobOfferRepository << control >> << @Repository >>
    }

    package service #DDDDDD {
        class JobOfferService << control >> << @Service >> {
            + findById(id: UUID): JobOffer
            + findByCompany(final company: CharSequence) : Collection<JobOffer>
            + find(queryParams: Map<String, String>): Collection<JobOffer>
        }

        JobOfferService o--> JobOfferRepository : repo
        JobOfferService .right.> JobOffer
        JobOfferService ..> Service
        JobOfferService .up.> UUID
        JobOfferService .up> Collection
        JobOfferService .up.> Map
    }
}

hide empty members

footer (c) Nikolas Vix

@enduml
